--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -1,29 +1,20 @@
 .logo-wrapper {
   position: fixed;
   width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
   z-index: 3;
-  top: 10px;
   left: 0;
+  top: 0;
   pointer-events: none;
   text-align: center;
   h1 {
-    transition: font-size $baseTransitionSpeed, transform $baseTransitionSpeed;
-    // transition-delay: 1000ms;
-    transform: translate(-0.1em, 0);
-  }
-  h2 {
-    transition: all $baseTransitionSpeed;
-    // transition-delay: 1000ms;
-    opacity: 0;
-  }
-  &.show-intro h1, &.show-intro h2 {
-    transform: translate(-0.1em, 30vh);
-    opacity: 1;
-  }
-  &.show-intro h1 {
     font-size: 18vw;
   }
-  &.show-intro h2 {
+  h2 {
     font-size: 2.5vw;
   }
 }
