add: base shadow var

--- a/assets/scss/components/_weather.scss
+++ b/assets/scss/components/_weather.scss
@@ -4,6 +4,7 @@
   left: 1rem;
   z-index: 99;
   line-height: 0.5;
+  text-shadow: $baseShadow;
   .weather-icon {
     height: 2.5em;
     margin-right: -.5em;
