--- a/assets/scss/components/_weather.scss
+++ b/assets/scss/components/_weather.scss
@@ -9,5 +9,6 @@
     height: 2.5em;
     margin-right: -.5em;
     margin-left: -.5em;
+    filter: drop-shadow(1px 3px 2px rgba(0, 0, 0, .5));
   }
 }
